--- a/monthly_challenges/challenges/templates/challenges/challenge.html
+++ b/monthly_challenges/challenges/templates/challenges/challenge.html
@@ -8,6 +8,10 @@
 </head>
 <body>
     <h1>{{ month_name|title }} Challenge</h1>
-    <h2>{{ text }}</h2>
+    {% if text is not None %}
+        <h2>{{ text }}</h2>
+    {% else %}
+        <p>There is no Challenge for this month yet</p> 
+    {% endif %}                     
 </body>
 </html>
