--- a/monthly_challenges/challenges/templates/challenges/challenge.html
+++ b/monthly_challenges/challenges/templates/challenges/challenge.html
@@ -1,16 +1,23 @@
-{% extends "base.html" %}
+{% extends 'base.html' %}
+{% load static %}
+
+{% block css_files %}
+    <link rel="stylesheet" href="{% static "challenges/challenge.css" %}">
+    <link rel="stylesheet" href="{% static "challenges/includes/header.css" %}">
+{% endblock %}
 
 {% block page_title %}
     {{ month_name|title }} Challenge
 {% endblock%}
 
 {% block content %}
-    {% include "./includes/header.html" %}
+    {% include "Challenges/includes/header.html" %}
 
     <h1>{{ month_name|title }} Challenge</h1>
     {% if text is not None %}
         <h2>{{ text }}</h2>
     {% else %}
-        <p>There is no Challenge for this month yet</p> 
+        <p class="fallback">There is no Challenge for this month yet</p> 
     {% endif %}                     
 {% endblock%}
+
